syntax = "proto3";
package dydxprotocol.vault;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "dydxprotocol/vault/params.proto";

option go_package = "github.com/dydxprotocol/v4-chain/protocol/x/vault/types";

// Query defines the gRPC querier service.
service Query {
  // Queries the Params.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/dydxprotocol/v4/vault/params";
  }
}

// QueryParamsRequest is a request type for the Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is a response type for the Params RPC method.
message QueryParamsResponse {
  Params params = 1 [ (gogoproto.nullable) = false ];
}
